# backend/docs/swagger.json
@@ -2301,17 +2301,26 @@
         "controllers.Bookcourse": {
             "type": "object",
             "properties": {
+                "access": {
+                    "type": "integer"
+                },
                 "booktime": {
                     "type": "string"
                 },
                 "course": {
                     "type": "integer"
                 },
+                "detail": {
+                    "type": "string"
+                },
                 "employee": {
                     "type": "integer"
                 },
                 "member": {
                     "type": "integer"
+                },
+                "phone": {
+                    "type": "string"
                 }
             }
         },
@@ -2445,8 +2454,20 @@
         "ent.Bookcourse": {
             "type": "object",
             "properties": {
+                "ACCESS": {
+                    "description": "ACCESS holds the value of the \"ACCESS\" field.",
+                    "type": "integer"
+                },
                 "BOOKTIME": {
                     "description": "BOOKTIME holds the value of the \"BOOKTIME\" field.",
+                    "type": "string"
+                },
+                "DETAIL": {
+                    "description": "DETAIL holds the value of the \"DETAIL\" field.",
+                    "type": "string"
+                },
+                "PHONE": {
+                    "description": "PHONE holds the value of the \"PHONE\" field.",
                     "type": "string"
                 },
                 "edges": {
