# backend/ent/schema/Bookcourse.go
@@ -1,6 +1,7 @@
 package schema
 
 import (
+	"regexp"
 	"github.com/facebookincubator/ent"
 	"github.com/facebookincubator/ent/schema/field"
 	"github.com/facebookincubator/ent/schema/edge"
@@ -14,6 +15,14 @@ type Bookcourse struct {
 // Fields of the Bookcourse.
 func (Bookcourse) Fields() []ent.Field {
 	return []ent.Field{
+		field.Int("ACCESS").
+			Max(9),
+		field.String("PHONE").
+			Match(regexp.MustCompile("[0-9]+[0-9]+[0-9]+[0-9]+[0-9]+[0-9]+[0-9]+[0-9]+[0-9]+[0-9]")).
+			MaxLen(10).
+			NotEmpty(),
+		field.String("DETAIL").
+			MaxLen(30),
 		field.Time("BOOKTIME"),
 	}
 }
